# AcousticSim

./: .gitignore  CMakeLists.txt  README.md  vis.py
cmake/: configure_movecmd.cmake
config/: acoustic_config.json  acoustic_trans_config.json  config.json  his_config.json  modal_ana_config.json  visco_ms_config.json
config/materials/: glass.json  plasticity.json  rubber.json  steel.json  wood.json
config/obj_configs/: obj0.json  obj38.json  obj98.json
config/obj_configs/beam/: beam0.json  beam1.json  beam10.json  beam11.json  beam12.json  beam13.json  beam14.json  beam2.json  beam3.json  beam4.json  beam5.json  beam6.json  beam7.json  beam8.json  beam9.json
config/obj_configs/plate/: plate_122.json  plate_434.json
data/shaders/: shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
data/tetmesh/cube/: cube.1.edge  cube.1.ele  cube.1.face  cube.1.mesh  cube.1.node  cube.1.smesh  cube.off
data/tetmesh/cube_v146/: cube_v146.1.edge  cube_v146.1.ele  cube_v146.1.face  cube_v146.1.mesh  cube_v146.1.node  cube_v146.1.smesh  cube_v146.off
data/tetmesh/cube_v38/: cube_v38.1.edge  cube_v38.1.ele  cube_v38.1.face  cube_v38.1.mesh  cube_v38.1.node  cube_v38.1.smesh  cube_v38.off
data/tetmesh/single_tet/: single.node  single.node.tet  single.node.vert  tet.1.edge  tet.1.ele  tet.1.face  tet.1.mesh  tet.1.node  tet.1.smesh  tet.off
imgui/: CMakeLists.txt
includes/: VersionConfig.h.in  tinyexr.h
scripts/: baraff_stretch_freedom.py  gen_tetmesh.py  gen_wave.ipynb  verify_integral_of_shape_function.py  visualize_convergence.py
scripts/modal_analysis/: analy.py  calc_stiff.py
scripts/transfer/: transfer.py  vib_obj.py  viewer_3d.py
src/: CGSolver.cpp  CGSolver.h  main.cpp
src/cameras/: ArcBallCamera.cpp  ArcBallCamera.h  CameraBase.cpp  CameraBase.h  CameraBuilder.cpp
src/geometries/: AABB.cpp  AABB.h  Arrow.cpp  Arrow.h  BVHDCD.h  BezierCurve.cpp  BezierCurve.h  CMakeLists.txt  CollisionDetecter.cpp  CollisionDetecter.h  CollisionInfo.cpp  CollisionInfo.h  ObjExport.cpp  ObjExport.h  ObjectBVH.cpp  ObjectBVH.h  Primitives.cpp  Primitives.h  Raycaster.cpp  Raycaster.h  Tetrahedron.cpp  Tetrahedron.h  Triangulator.cpp  Triangulator.h  TriangulatorDelaunay.cpp
src/scenes/: BoundingVolume2D.cpp  BoundingVolume2D.h  CMakeLists.txt  DrawScene.cpp  DrawScene.h  DrawSceneImGUI.cpp  DrawSceneImGUI.h  DrawSceneVk.cpp  SceneBuilder.cpp  SceneBuilder.h  SimScene.cpp  SimScene.h  SimStateMachine.cpp  SimStateMachine.h
src/sim/: AcousticBody.cpp  AcousticBody.h  AcousticSoftBody.cpp  AcousticSoftBody.h  AudioOutput.cpp  AudioOutput.h  AudioWave.cpp  AudioWave.h  BaseObject.cpp  BaseObject.h  CMakeLists.txt  KinematicBody.cpp  KinematicBody.h  KinematicBodyBuilder.cpp  KinematicBodyBuilder.h  ModalSoftBody.cpp  ModalSoftBody.h  ModeVibration.h  Monopole.cpp  Monopole.h  Perturb.cpp  Perturb.h  SimObjectBuilder.cpp  SimObjectBuilder.h  SoftBody.cpp  SoftBody.h  TransferSoftBody.cpp  TransferSoftBody.h  ViscoMassSpring.cpp  ViscoMassSpring.h
src/sim/acoustic/: AudioOutput.cpp  AudioOutput.h  BasePole.cpp  BasePole.h  CMakeLists.txt  Dipole.h  ModalSoftBody.cpp  ModalSoftBody.h  ModeVibration.cpp  ModeVibration.h  Monopole.cpp  Monopole.h  TransferSoftBody.cpp  TransferSoftBody.h
src/sim/cloth/: BaraffCloth.cpp  BaraffCloth.h  BaraffClothGpu.cpp  BaraffClothGpu.cu  BaraffClothGpu.cuh  BaraffClothGpu.h  BaraffMaterial.cpp  BaraffMaterial.h  BaraffMaterialUnstable.h  BaseBendingMaterial.cpp  BaseCloth.cpp  BaseCloth.h  BaseMaterial.cpp  BaseMaterial.h  CMakeLists.txt  ClothBuilder.cpp  ClothBuilder.h  ClothPropertyManager.cpp  DihedralBending.cpp  DihedralBending.h  FEMCloth.cpp  FRPCGSolver.cu  GDSolver.cu  ImplicitCloth.cpp  ImplicitCloth.h  InnerForceCalculator.cpp  InnerForceCalculator.h  JacobiSolver.cu  LinctexCloth.cpp  PBDCloth.cpp  PCGSolver.cu  PDCloth.cpp  QBendingMaterial.cpp  QBendingMaterial.h  SemiCloth.cpp
src/sim/cloth/archive/: BaraffClothGpu.cpp  BaraffClothGpu.cu  BaraffClothGpu.h  BaraffMaterialOld.cpp  BaraffMaterialOld.h  ClothNoise.cpp  ClothNoise.h  ClothProperty.cpp  ClothProperty.h  ClothPropertyManager.h  FRPCGSolver.cu  GDSolver.cu  ImplicitCloth.cpp  JacobiSolver.cu  LinctexCloth.cpp  LinctexCloth.h  PBDCloth.cpp  PCGSolver.cu  PDCloth.cpp  PDCloth.h  SemiCloth.cpp  SemiCloth.h
src/sim/cloth/archive/noise/: ClothBaseNoise.h
src/sim/cloth/bad_impl/: BaraffMaterialUnstable.cpp
src/sim/cloth/gpu_solvers/: PCGSolver.cu  PCGSolver.h
src/sim/cloth/gpu_utils/: Cuda2DArray.h  CudaArray.h  CudaAsync.cu  CudaAsync.h  CudaDef.h  CudaIntrinsic.h  CudaMath.h  CudaMatrix.h  CudaMemory.h  GPUMatrixOps.cu
src/sim/cloth/noise/: ClothHandNoise.h  ClothManagerNoise.h  ClothWaveNoise.cpp  ClothWaveNoise.h
src/sim/collision/: BVHCollisionDetecter.cpp  BVHCollisionDetecter.h  CMakeLists.txt  CollisionDetecter.cpp  CollisionDetecter.h  CollisionInfo.cpp  CollisionInfo.h
src/sim/gpu_solvers/: PCGSolver.cu  PCGSolver.h
src/sim/gpu_utils/: Cuda2DArray.h  CudaArray.h  CudaAsync.cu  CudaAsync.h  CudaDef.h  CudaDevPtr.h  CudaELLMatrix.cpp  CudaELLMatrix.h  CudaIntrinsic.h  CudaMath.h  CudaMatrix.h  CudaMatrix.h.bak  CudaMatrixUtil.h  CudaMemory.cpp  CudaMemory.h  CudaVector.h.bak  GPUMatrixOps.cu
src/sim/kinematic/: CMakeLists.txt
src/sim/softbody/: AcousticLinearElasticity.cpp  AcousticLinearElasticity.h  BaseMaterial.cpp  BaseMaterial.h  CMakeLists.txt  FourOrderTensor.cpp  FourOrderTensor.h  FourOrderTensorTest.hpp  MaterialBuilder.cpp  MaterialBuilder.h  MaterialModel.h  NeoHookeanMaterial.cpp  NeoHookeanMaterial.h  SoftBody.cpp  SoftBody.h  SoftBodyImplicit.cpp  SoftBodyImplicit.h  SoftBodyInt.cpp  StvkMaterial.cpp  StvkMaterial.h  ThreeOrderTensor.cpp  ThreeOrderTensor.h  softbody_export.cpp
src/utils/: CMakeLists.txt  ColorUtil.h  ComplexUtil.h  DefUtil.h  EigenUtil.h  FileUtil.cpp  FileUtil.h  JsonUtil.cpp  JsonUtil.h  MathUtil.cpp  MathUtil.h  MathUtil2.cpp  ObjUtil.cpp  ObjUtil.h  RenderUtil.cpp  RenderUtil.h  RotUtil.cpp  RotUtil.h  SparseUtil.h  SpecialFuncUtil.cpp  SpecialFuncUtil.h  SpecialFunctionUtil.h  TetUtil.cpp  TetUtil.h
